Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -701,7 +701,6 @@ footer {
   padding: 26px 0 0px;
   margin: 0;
   width: 100%;
-  text-align: center;
 }
 
 .widget.extendednavigation a.pull {
